--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,8 @@
 html,
 body {
+  font-family: Helvetica, Sans-Serif;
   width: auto;
+  background-color: #020074;
 }
 
 .hidden {
@@ -8,14 +10,17 @@ body {
 }
 
 /* The switch - the box around the slider */
+
 .switch {
   position: relative;
   display: inline-block;
   width: 60px;
   height: 34px;
+  text-align: right;
 }
 
 /* Hide default HTML checkbox */
+
 .switch input {
   opacity: 0;
   width: 0;
@@ -23,6 +28,7 @@ body {
 }
 
 /* The slider */
+
 .slider {
   position: absolute;
   cursor: pointer;
@@ -48,11 +54,11 @@ body {
 }
 
 input:checked + .slider.round {
-  background-color: #f35221;
+  background-color: #de1633;
 }
 
 input:focus + .slider.round {
-  box-shadow: 0 0 1px #f35221;
+  box-shadow: 0 0 1px #de1633;
 }
 
 input:checked + .slider:before {
@@ -62,6 +68,7 @@ input:checked + .slider:before {
 }
 
 /* Rounded sliders */
+
 .slider.round {
   border-radius: 34px;
 }
@@ -71,21 +78,53 @@ input:checked + .slider:before {
 }
 
 .traderButton {
-  flex:auto;
   cursor: pointer;
   height: 26px;
   width: 26px;
-  left: 4px;
   bottom: 4px;
-  background-color: #f35221;
+  background-color: #de1633;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
-input:checked + .slider.rage {
-  background-color: #9300f5;
+.ButtonName {
+  float: left;
+  padding: 10px;
+  color: white;
 }
 
-input:focus + .slider.rage {
-  box-shadow: 0 0 1px #9300f5;
+.box {
+  float: right;
+  padding: 5px;
+  padding-right: 20px;
+}
+
+.img {
+  width: 280px;
+  text-align: center;
+  background-color: #020074;
+  padding: 10px;
+}
+
+#popup-content {
+  background-color: #020074;
+}
+
+.text {
+  float: right;
+  margin: 5px;
+  padding: 5px;
+  color: white;
+  background-color: #020074;
+}
+
+.status {
+  color: orange;
+  text-align: right;
+  margin: 10px;
+  padding-bottom: 10px;
+}
+
+.address {
+  font-size: x-small;
 }
